overleaf includes results interp

--- a/overleaf_document.tex
+++ b/overleaf_document.tex
@@ -705,6 +705,8 @@ Global Generation (TWh) - Aggressive & 3,600 & 5,200 & 6,800 \\
 \end{tabular}
 \end{table}
 
+The table shows that the varying scenarios have a difference of 2,200 TWh for their predictions by 2050 and therefore reflecting that there exists a substantial uncertainty in the deployment rates of future nuclear energy systems. The aggressive scenario’s output is dependent on accelerated construction timelines and better policy support whereas the conservative scenario expects further delays or projects being cancelled.
+
 \subsection{IEA Gap Analysis}
 The gap analysis suggests that nuclear generation will not reach IEA targets by 2030 outside of the aggressive scenario.
 
@@ -722,6 +724,8 @@ The gap analysis suggests that nuclear generation will not reach IEA targets by 
 \end{tabular}
 \end{table}
 
+The 15.3\% miss that is projected for the year 2030 tells us that the status quo of construction pipelines are insufficient if we want to meet our near-term IEA goals. The gap, however, does actually narrow over time and actually reverses by 2050 (under the base scenario).
+
 \subsection{Avoided Emissions}
 The predicted avoided cumulative CO$_2$ emissions over the next 25 years from nuclear generation replacing fossil fuels reach up to 50 GtCO$_2$.
 
@@ -738,6 +742,8 @@ Car Equivalent & 400--600 million cars (25 years) \\
 \bottomrule
 \end{tabular}
 \end{table}
+
+The cumulative 30 to 50 GtCO$_2$ that could be avoided represents an approximate 5 to 8\% of the remaining global  carbon budget for 1.5°C. It effectively proves the potential nuclear energy can have in its contribution to climate change mitigation efforts.
 
 %==============================================================================
 \section{Reproducibility and Version Control}
